--- a/_certificates/certificates-2.html
+++ b/_certificates/certificates-2.html
@@ -3,3 +3,14 @@ title: "DeepLearning.AI TensorFlow Developer"
 excerpt: "Organizer: Cousera <br/><img src='/images/DL Cert.png'>"
 collection: certifcicates
 ---
+
+Description:
+Completed 4 courses:
+
+Introduction to TensorFlow for AI, ML, and DL
+
+Convolutional Neural Networks in TensorFlow
+
+Natural Language Processing in TensorFlow
+
+Sequences, Time Series, and Prediction
