--- a/_certificates/certificates-2.html
+++ b/_certificates/certificates-2.html
@@ -1,16 +1,7 @@
 ---
-title: "DeepLearning.AI TensorFlow Developer"
-excerpt: "Organizer: Cousera <br/><img src='/images/DL Cert.png'>"
-collection: certifcicates
+title: "certificates item number 2"
+excerpt: "Short description of certificates item number 2 <br/><img src='/images/500x300.png'>"
+collection: certificates
 ---
 
-Description:
-Completed 4 courses:
-
-Introduction to TensorFlow for AI, ML, and DL
-
-Convolutional Neural Networks in TensorFlow
-
-Natural Language Processing in TensorFlow
-
-Sequences, Time Series, and Prediction
+This is an item in your certificates. It can be have images or nice text. If you name the file .md, it will be parsed as markdown. If you name the file .html, it will be parsed as HTML. 
