--- a/_certificates/certificates-2.html
+++ b/_certificates/certificates-2.html
@@ -1,16 +1,14 @@
 ---
-title: "DeepLearning.AI TensorFlow Developer"
-excerpt: "Organizer: Cousera <br/><img src='/images/DL Cert.png'>"
-collection: certifcicates
+title: "First Price: Developer circles Vietnam innovation challenge"
+excerpt: "Organizer: Facebook and Coder School<br/><img src='/images/DevC.jpg' width='227' height='330'/>"
+collection: certificates
 ---
 
 Description:
-Completed 4 courses:
+Fraud detection on identification cards. It supports staff to speed up their validation process. Solve 3 scopes below:
 
-Introduction to TensorFlow for AI, ML, and DL
++ OCR: get information from ID card (Google Cloud Vision API).
 
-Convolutional Neural Networks in TensorFlow
++ Face comparison: compare the face on the ID card and that on the selfie photo (Amazon Rekognition – AWS).
 
-Natural Language Processing in TensorFlow
-
-Sequences, Time Series, and Prediction
++ Document template check: validate the template (Template Matching – OpenCV).
